# hugin-2012.0.0

./: .gitignore  .hgtags  CMakeLists.txt  rev.txt
CMakeModules/: FindExiv2.cmake  FindGLUT.cmake  FindOpenMP.cmake  FindPANO13.cmake  FindTIFF.cmake  FindTclap.cmake  win_bundle.cmake
mac/: celeste-Info.plist
src/: CMakeLists.txt  hugin_config_mac.h  hugin_shared.h
src/ARLabStitcherwx/: 02.txt  ARCPImageCtrl.cpp  ARCPImageCtrl.h  ARLabStitcherwx.cpp  ARLabStitcherwx.fbp  ARLabStitcherwx.h  ARLabStitcherwx.xrc  ARLabStitcherwxControlPointFrame.cpp  ARLabStitcherwxControlPointFrame.h  ARLabStitcherwxGPSFrame.cpp  ARLabStitcherwxGPSFrame.h  ARLabStitcherwxMainFrame.cpp  ARLabStitcherwxMainFrame.h  ARLabStitcherwxNewProjectWizard.cpp  ARLabStitcherwxNewProjectWizard.h  ARLabStitcherwx_app.cpp  ARLabStitcherwx_app.h  ARLabStitcherwx_rc.rc  CMakeLists.txt  CPDetectorDialog.cpp  CPEditorPanel.cpp  CPImageCtrl.cpp  CPImagesComboBox.cpp  CPListFrame.cpp  CPListFrame.h  CommandHistory.cpp  GLPreviewFrame.cpp  ImagesList.cpp  ImagesList.h  ImagesPanel.cpp  ImagesPanel.h  PreviewFrame.cpp  PreviewIdentifyTool.cpp  PreviewLayoutLinesTool.cpp  PreviewPanel.cpp  PreviewPanel.h  SuperOverlay.cpp  SuperOverlay.h  TextKillFocusHandler.cpp  TextKillFocusHandler.h  (+7 more)
src/GPSConnector/: CMakeLists.txt  GPSConnector.cpp
src/GPSFilter/: CMakeLists.txt  GPSFilter.cpp
src/arlabimagestitch/: CMakeLists.txt  main.cpp  multiview.cpp  multiview.h  pto_gen.h  usagechart.cpp  usagechart.h
src/arlabimagestitch/cpfind/: cpfind.h
src/dox/: folder.dox  introduction.dox
src/foreign/vigra/vigra/: mathutil.hxx
src/foreign/zthread/: ReadMe.txt  zthread.vcproj
src/hugin1/base_wx/: LensTools.cpp  MyExternalCmdExecDialog.cpp  MyExternalCmdExecDialog.h
src/hugin1/hugin/: CPDetectorDialog.h  ImagesList.h  LensPanel.cpp  MaskLoadDialog.cpp  MaskLoadDialog.h
src/hugin1/hugin/xrc/: batch_frame.xrc
src/hugin1/hugin/xrc/data/help_en_EN/: help_index_en.hhk  help_toc_en.hhc  hhc.cmake  hugin_help_en_EN.hhp
src/hugin1/hugin/xrc/data/help_it_IT/: Hugin.html  Hugin_Batch_Processor.html  Hugin_Batch_Stitcher.html
src/hugin1/icpfind/: CMakeLists.txt  CPDetectorConfig.h  default.mac  default.unix  default.win  icpfind.cpp  icpfind.h
src/hugin1/stitch_project/: hugin_stitch_project.cpp
src/hugin_base/algorithms/control_points/: CleanCP.cpp  CleanCP.h
src/hugin_base/algorithms/optimizer/: PTOptimizer.h
src/hugin_base/algorithms/panorama_makefile/: PanoramaMakefilelibExport.cpp
src/hugin_base/hugin_utils/: utils.cpp
src/hugin_base/huginapp/: CachedImageRemapper.cpp  CachedImageRemapper.h
src/hugin_base/nona/: ImageRemapper.h  RemappedPanoImage.h  Stitcher.h
src/hugin_base/panodata/: PanoramaOptions.h
src/hugin_base/panotools/: PanoToolsInterface.h
src/hugin_base/vigra_ext/: ImageTransforms.h
src/hugin_cpfind/cpfind/: GPSMapping.hpp  PanoDetector - 副本.cpp  PanoDetector.cpp  PanoDetector.h  main.cpp
src/hugin_script_interface/: README.dox  hsi.i
src/hugin_script_interface/plugins/: CMakeLists.txt
src/hugin_script_interface/plugins-dev/: CMakeLists.txt
src/split_blend/: CMakeLists.txt  SplitBlendPanel.cpp  SplitBlendPanel.h  split_blend.cpp  split_blend.h
src/tools/: autooptimiser.cpp  cpclean.cpp  nona.cpp  pano_modify.cpp  pano_trafo.cpp  pto_gen.cpp
